# ept_backend

./: .env  .gitignore  app.py  pyproject.toml
api/: deps.py  main.py
api/routes/: assunto.py  auth.py  concurso.py  disciplina.py  users.py  usuario.py
core/: database.py  security.py  settings.py  utils.py  validators.py
migrations/: env.py
migrations/versions/: 0471d419e30e_aleração_na_tabela_concurso_assunto.py  0ab72b0eb2b3_corrige_relacionamento_usuarios_.py  4187fc1d8cd9_alteração_na_tabela_usuário.py  4745db05de30_inicio_do_db.py  4ee3c12abe33_correção_na_tabela_concurso_assunto.py  5efad0482c09_criação_da_tabela_usuário.py  84bda197a965_corrige_relacionamento_assuntos.py  9138d449a73a_adição_da_tabela_assunto.py  9e253352aa63_criação_da_tabela_de_relação_entre_.py  b653fb3c93fa_criação_da_tabela_de_relação_entre_.py  bbf05ca57c5f_criação_da_tabela_assunto.py  c0f83f203a8c_geração_das_tabelas.py  c227fb532882_configuração_inicial.py  ef634910ac06_inicio_do_db.py  f157a8971a58_criando_a_tabela_usuário.py  f42b29918469_corrige_relacionamento_usuarios_.py  f87ecf0474af_corrige_relacionamento_usuarios_.py
models/: __init__.py  assunto.py  concurso.py  concurso_assunto.py  concurso_disciplina.py  concurso_disciplina_assunto.py  disciplina.py  users.py  usuario.py
routes/: auth.py  users.py
schemas/: assunto.py  concurso.py  disciplina.py  users.py  usuario.py
utils/: security.py
